--- a/Stack/index.html
+++ b/Stack/index.html
@@ -7,7 +7,7 @@
     <title>Stack</title>
   </head>
   <body>
-    <h1>Stack</h1>
+    <h1 style="text-align: center">Stack</h1>
     <script src="./app.js"></script>
   </body>
 </html>
